--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -13206,7 +13206,7 @@ a.read_more i {
 .nft_wrap {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 150px;
   overflow: hidden;
   border-radius: 10px 10px 0 0;
   -moz-border-radius: 10px 10px 0 0;
@@ -15131,6 +15131,33 @@ a.btn-slider:hover {
 .testi-slider .flex-direction-nav {
   display: none;
 }
+
+/* -------------------------Owl Carousel Skeleton--------------------- */
+
+.carousel__image {
+  height: 200px;
+}
+
+.carousel__image--author {
+  background-color: 	 #e7e4e4;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+.carousel__image--skeleton {
+  background-color: 	 #e7e4e4;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel__title--skeleton {
+  background-color: 	 #e7e4e4;
+  color: #e7e4e4;
+}
+
+
+
+
 
 /* Control Nav */
 
