--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -15132,32 +15132,52 @@ a.btn-slider:hover {
   display: none;
 }
 
-/* -------------------------Owl Carousel Skeleton--------------------- */
+/* -------------------------Owl Carousel & Owl Carousel Skeleton--------------------- */
 
 .carousel__image {
   height: 200px;
 }
 
+.carousel__image--author,
+.carousel__image--skeleton,
+.carousel__new-items--skeleton,
+.carousel__new-items--title,
+.carousel__new-items--price,
+.carousel_nft__item_like--skeleton {
+  background-color: 	 #dddbdd;
+}
+
+
 .carousel__image--author {
-  background-color: 	 #e7e4e4;
   width: 60px;
   height: 60px;
   border-radius: 50%;
 }
 .carousel__image--skeleton {
-  background-color: 	 #e7e4e4;
   width: 100%;
   height: 100%;
 }
 
-.carousel__title--skeleton {
-  background-color: 	 #e7e4e4;
-  color: #e7e4e4;
+.carousel__new-items--skeleton {
+  width: 100%;
+  height: 350px;
 }
 
+.carousel__new-items--title {
+  margin-top: 6px;
+  width: 180px;
+  height: 30px;
+}
 
+.carousel__new-items--price {
+  width: 100px; 
+  height: 20px;
+}
 
-
+.carousel_nft__item_like--skeleton {
+  width: 30px;
+  height: 15px;
+}
 
 /* Control Nav */
 
